--- a/resources/assets/css/app.css
+++ b/resources/assets/css/app.css
@@ -7,7 +7,6 @@
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
- 
 }
 
 .header {
@@ -30,7 +29,7 @@
     font-size: 4.5em;
     font-weight: 700;
 }
-
+/*********** fin estilos welcome page ***************/
 .panel-default>.panel-heading {
     background-color: #337ab7;
     color: #fff;
@@ -46,6 +45,10 @@
     background-color: #286090;
 }
 
+.carousel-indicators li {
+    border-color: #286090;
+}
+
 .carousel-indicators .active, ul.nav.navbar-nav.navbar-right > li.active > a  {
     background-color: #286090;
     border-color: #286090;
@@ -55,7 +58,15 @@
     color: #286090;
 }
 
+.carousel-control:hover {
+    color: #337ab7;
+}
+
 .navbar-inverse {
     border: none;
+}
+
+.well {
+    background-color: #ffffff;
 }
 /*********** fin estilos welcome page ***************/
