--- a/public/assets/css/behabitat.css
+++ b/public/assets/css/behabitat.css
@@ -169,6 +169,12 @@ footer {
 .well {
 	background-color: #ffffff;
 }
+
+ul.nav li.dropdown.open a.dropdown-toggle, ul.dropdown-menu li a:hover {
+	color: #fff;
+	background-color: #286090;
+}
+
 /*********** fin estilos welcome page ***************/
 
 /*# sourceMappingURL=behabitat.css.map */
